<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/body" android:background="#2E2A2A">

    <TextView
            android:text="@string/ghost"
            android:layout_width="132dp"
            android:layout_height="43dp"
            android:id="@+id/ghostName" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:textColor="@android:color/white" android:textSize="24sp"
            android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.481"
            android:textAlignment="center" android:textStyle="bold"/>
    <ImageView
            android:layout_width="164dp"
            android:layout_height="153dp"
            app:srcCompat="@drawable/moon"
            android:id="@+id/moon" android:contentDescription="@string/todo4"
            app:layout_constraintStart_toEndOf="@+id/ghostName" android:layout_marginStart="144dp"
            android:layout_marginBottom="256dp" app:layout_constraintBottom_toTopOf="@+id/number2"/>
    <ImageView
            android:layout_width="231dp"
            android:layout_height="683dp" app:srcCompat="@drawable/female"
            android:id="@+id/Femalehantu"
            app:layout_constraintStart_toEndOf="@+id/grass2"
            android:layout_marginStart="120dp"
            app:layout_constraintBottom_toBottomOf="@+id/number3" android:contentDescription="@string/todo6"/>
    <ImageView
            android:layout_width="222dp"
            android:layout_height="357dp" app:srcCompat="@drawable/umbella"
            android:id="@+id/umbrella"
            app:layout_constraintTop_toTopOf="@+id/ghostName" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/number1"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toStartOf="@+id/number2" android:contentDescription="@string/todo5"/>
    <ImageView
            android:layout_width="235dp"
            android:layout_height="351dp"
            app:srcCompat="@drawable/eye"
            android:id="@+id/eyeghost"
            app:layout_constraintTop_toBottomOf="@+id/ghostName" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/todo" app:layout_constraintHorizontal_bias="0.504"
            android:layout_marginTop="8dp"/>
    <ImageView
            android:layout_width="190dp"
            android:layout_height="98dp"
            app:srcCompat="@drawable/grassleft"
            android:id="@+id/grass2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/number1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ghostName"
            app:layout_constraintVertical_bias="0.832" android:layout_marginEnd="200dp"
            app:layout_constraintEnd_toStartOf="@+id/number2" android:contentDescription="@string/todo2"/>
    <TextView
            android:layout_width="63dp"
            android:layout_height="29dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.508"
            android:id="@+id/number" tools:text="0" android:textSize="24sp"
            android:textAlignment="center" android:textColor="@android:color/white" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.752"/>
    <Button
            android:text="@string/number_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/number1"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/eyeghost"
            android:textSize="18sp" android:layout_marginStart="60dp"
            app:layout_constraintStart_toStartOf="parent" android:textColor="@android:color/white"
            android:background="@drawable/custombtn"/>
    <Button
            android:text="@string/number_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/number2"
            android:textAllCaps="false" android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/eyeghost"
            android:background="@drawable/custombtn"
            android:textColor="@android:color/white" app:layout_constraintStart_toEndOf="@+id/number1"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/number_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/number3" android:textColor="@android:color/white"
            android:background="@drawable/custombtn" android:textAllCaps="false" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/number1" android:layout_marginStart="60dp"
            app:layout_constraintStart_toStartOf="parent" android:textSize="18sp"/>
    <Button
            android:text="@string/number_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/number4" android:textColor="@android:color/white"
            android:background="@drawable/custombtn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/number2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/number3"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.537" android:textSize="18sp"
            android:textAllCaps="false"/>
    <ImageView
            android:layout_width="177dp"
            android:layout_height="95dp"
            app:srcCompat="@drawable/grassright"
            android:id="@+id/grass3" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/number2" app:layout_constraintStart_toEndOf="@+id/number1"
            android:layout_marginStart="204dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/eyeghost" app:layout_constraintVertical_bias="0.83"
            android:contentDescription="@string/todo3"/>
    <Button
            android:text="@string/home"
            android:layout_width="80dp"
            android:layout_height="39dp"
            android:id="@+id/home"
            android:layout_marginBottom="364dp" app:layout_constraintBottom_toTopOf="@+id/number1"
            android:textAlignment="center" android:backgroundTint="@color/colorAccent"
            android:layout_marginEnd="24dp" app:layout_constraintEnd_toStartOf="@+id/ghostName"/>

</androidx.constraintlayout.widget.ConstraintLayout>